syntax = "proto3"; // Specify proto3 version.

package users.v1; // Optional: unique package name.

// Service: methods that the grpc server can expose to the client
service UsersService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc List (ListRequest) returns (ListResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Remove (RemoveRequest) returns (RemoveResponse);
}

// Messages: Type definition for users.
message User {
  string user_id = 1;
  string email = 2;
  string name = 3;
}

// Create new User
message CreateRequest {
  User user = 1;
}
message CreateResponse {}

// List Users
message ListRequest {}
message ListResponse {
  repeated User user = 1;
}

// Get User
message GetResponse {
  User user = 1;
}
message GetRequest {
  string user_id = 1;
}

// Remove User
message RemoveRequest {
  string user_id = 1;
}
message RemoveResponse {}
